maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:6: error: ':' expected but ')' found.
def isDirectionFree(dir) = {var dirAct = getDirection(); setDirection(dir);var mur =estFaceMur(); setDirection(dirAct); return ()}
                       ^Escaper:20: error: identifier expected but '}' found.
}
^